// Copyright 2017 Google Inc. All Rights Reserved.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/google/keytransparency/core/proto/keytransparency_v1_proto";

// Mutation Service
//
// The Key Transparency mutation server service consists of APIs to fetch
// mutations.
package google.keytransparency.v1;

import "google/api/annotations.proto";
import "proto/keytransparency_v1_proto/keytransparency_v1_grpc.proto";

// The Mutation Service API represents a directory of mutations:
//
// - Mutations can be collected using the GetMutation APIs. Mutation resources
//   are named /v1/epochs/* and /v1/epochs/stream.
//
service MutationService {
  // GetMutations returns a list of mutations in a specific epoch.
  //
  // Returns a list of mutations and their inclusion proofs along with the epoch
  // signed map root.
  rpc GetMutations(GetMutationsRequest)
      returns (GetMutationsResponse) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs/{epoch}" };
  }

  // GetMutationsStream is a streaming API similar to GetMutations.
  //
  // Returns a list of mutations and their inclusion proofs along with the epoch
  // signed map root.
  rpc GetMutationsStream(GetMutationsRequest)
      returns (stream GetMutationsResponse) {
    option (google.api.http) = { get: "/v1/domains/{domain_id}/epochs:stream" };
  }
}
